# Test-case-MadSoft

./: .env.example  .gitignore  README.md  docker-compose.yml
mems_api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
mems_api/migrations/: Dockerfile  entrypoint.sh  env.py
mems_api/migrations/versions/: 2024_06_16_1235-7cdc94d77869_init.py  2024_06_17_1944-2c7dc39e1447_init.py  2024_06_17_2007-9e32d32857a3_init.py
mems_api/src/configs/: app.py  config.py  postgres.py  redis.py  s3_saver.py
mems_api/src/db/: postgresdatabase.py
mems_api/src/db/entities/: __init__.py  mem.py
mems_api/src/db/repositories/: abstract.py  base.py  mem.py
mems_api/src/endpoints/v1/: mem.py
mems_api/src/schemas/api/: base.py
mems_api/src/schemas/api/v1/: mem.py
mems_api/src/schemas/db/: mem.py
mems_api/src/services/: base.py  imsge_saver.py  mem.py
mems_api/src/utils/: settings.py  sqlalchemy.py
mems_api/src/validators/: base.py  image.py  mem.py
nginx/: nginx.conf
nginx/configs/: site.conf
s3_saver/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
s3_saver/src/configs/: config.py  redis.py  sentry.py
s3_saver/src/endpoints/v1/: image.py
s3_saver/src/schemas/api/: base.py
s3_saver/src/schemas/api/v1/: image.py
s3_saver/src/services/: base.py  imsge.py  imsge_saver.py  mem.py
s3_saver/src/utils/: settings.py
s3_saver/src/validators/: abstract.py  base.py  image.py
